@@ -12,6 +12,7 @@ Build-Depends: debhelper (>= 12~),
                python3-distro-info,
                python3-debian,
                python3-levenshtein,
+               python3-pkginfo,
                python3-setuptools,
                python3-ruamel.yaml,
                gpg
@@ -27,6 +28,7 @@ Depends: devscripts,
          python3-dulwich (>= 0.19.7),
          python3-distro-info,
          python3-levenshtein,
+         python3-pkginfo,
          python3-ruamel.yaml,
          ${misc:Depends},
          ${python3:Depends}
